# terprint-menudownloader

./: -  .gitignore  CHANGELOG.md  CHANGES_20260119.md  DEPLOYMENT_GUIDE.md  GENETICS_IMPORT_GUIDE.md  GREEN_DRAGON_STATUS.md  PRODUCT_PAGE_SCRAPING_SUMMARY.md  README.md  analyze_cookies.py  audit_query.py  audit_report.py  check_curaleaf_structure.py  check_final_count.py  check_genetics_details.py  check_index.py  check_product_urls.py  check_records.py  cookies_menu_latest.json  cookies_sample.html  curaleaf_menu_latest.json  final_verify.py  find_product_data.py  flowery_menu_latest.json  function_app.py  genetics_index.json  get_menu_samples.py  get_menu_samples2.py  local.settings.json  muv_menu_latest.json  openapi.json  probe_deep.py  probe_deep2.py  probe_final.py  probe_results.json  probe_states.py  pyproject.toml  raw_partition.py  requirements.txt  run_palatka.py  (+40 more)
.github/: copilot-instructions.md  copy-instructions-to-repos.ps1  instructions.md
container_app/: Dockerfile  deploy.ps1  dispensary_locations.json  main.py  menu_config.json  notifications.py  pip.conf  requirements.txt  secrets.yaml  stock_alerts.py  stock_indexer.py  stock_indexer_v1_backup.py  stock_routes.py  stock_routes_v1_backup.py  trulieve_fixed.py
docs/: ARCHITECTURE.md  ORGANIZATION_SECRETS_MIGRATION.md  QUALITY_REVIEW.md
shared/: terprint-instructions.json
src/: FINAL_GENETICS_IMPORT.sql  IMPORT_CHECKLIST.md  PROJECT_SUMMARY.txt  all_genetics_20260120.json  backfill_flowery.py  backfill_muv.py  backfill_others.py  backfill_trulieve.py  check_blob_structure.py  check_cookies.py  check_product_fields.py  check_product_fields2.py  check_product_fields3.py  check_trulieve_structure.py  coa_genetics_20260120_045128.json  coa_genetics_extractor.py  combine_all_genetics.py  consolidate_all_genetics.py  consolidated_genetics_20260120_045448.json  create_sql_script.py  demo_webscraping.py  extract_product_urls.py  final_consolidated_genetics.json  final_consolidation.py  find_product_menus.py  find_products.py  generate_report.py  genetics_import.sql  genetics_import_consolidated_20260120_045448.sql  genetics_import_result.txt  genetics_report_20260120.txt  genetics_webscraper.py  inspect_menu.py  (+10 more)
(+74 files in other folders)
