[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terprint-menu-downloader"
version = "1.3.5"
description = "Terprint Menu Downloader - Dispensary data collection pipeline with Azure Data Lake integration"
readme = "README.md"
license = {text = "Proprietary"}
authors = [
    {name = "Acidni LLC", email = "dev@acidni.com"}
]
maintainers = [
    {name = "Acidni LLC", email = "dev@acidni.com"}
]
keywords = ["dispensary", "orchestration", "pipeline", "azure", "terprint", "menu-downloader"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.0.0",
    "azure-identity>=1.15.0",
    "azure-core>=1.30.0",
    "azure-storage-file-datalake>=12.14.0",
    "opencensus-ext-azure>=1.1.0",
    "applicationinsights>=0.11.0",
    "selenium>=4.0.0",
    "selenium-wire>=5.1.0",
    "undetected-chromedriver>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]
full = [
    "terprint-logger>=1.0.0",
    "terprint-storage>=1.0.0",
    "terprint-coa-extractor>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Acidni-LLC/terprint-python"
Repository = "https://github.com/Acidni-LLC/terprint-python"
Documentation = "https://github.com/Acidni-LLC/terprint-python#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"terprint_menu_downloader" = ["menus/*.csv", "dispensaries/**/*.py"]
